syntax = "proto2";

option go_package = "github.com/stripe/skycfg/test_proto";
package skycfg.test_proto;

message MessageV2 {
  optional int32  f_int32   = 1;
  optional int64  f_int64   = 2;
  optional uint32 f_uint32  = 3;
  optional uint64 f_uint64  = 4;
  optional float  f_float32 = 5;
  optional double f_float64 = 6;
  optional string f_string  = 7 [default="default_str"];;
  optional bool   f_bool    = 8;

  optional MessageV2 f_submsg = 9;

  repeated string        r_string = 10;
  repeated MessageV2     r_submsg = 11;

  map<string, string>    map_string = 12;
  map<string, MessageV2> map_submsg = 13;

  message NestedMessage {
    optional string f_string = 1;
  }
  optional NestedMessage f_nested_submsg = 16;

  enum NestedEnum {
    NESTED_ENUM_A = 0;
    NESTED_ENUM_B = 1;
  }
  optional ToplevelEnumV2 f_toplevel_enum = 14;
  optional NestedEnum f_nested_enum = 15;

  oneof f_oneof {
    string f_oneof_a = 17;
    string f_oneof_b = 18;
  }

  // NEXT: 19
}

enum ToplevelEnumV2 {
  TOPLEVEL_ENUM_V2_A = 0;
  TOPLEVEL_ENUM_V2_B = 1;
}
