// Copyright 2018 The Skycfg Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

option go_package = "github.com/stripe/skycfg/test_proto";
package skycfg.test_proto;

import "google/protobuf/wrappers.proto";

message MessageV3 {
  int32  f_int32   = 1;
  int64  f_int64   = 2;
  uint32 f_uint32  = 3;
  uint64 f_uint64  = 4;
  float  f_float32 = 5;
  double f_float64 = 6;
  string f_string  = 7;
  bool   f_bool    = 8;

  MessageV3 f_submsg = 9;

  repeated string        r_string = 10;
  repeated MessageV3     r_submsg = 11;

  map<string, string>    map_string = 12;
  map<string, MessageV3> map_submsg = 13;

  message NestedMessage {
    string f_string = 1;
  }
  NestedMessage f_nested_submsg = 16;

  enum NestedEnum {
    NESTED_ENUM_A = 0;
    NESTED_ENUM_B = 1;
  }

  ToplevelEnumV3 f_toplevel_enum = 14;
  NestedEnum f_nested_enum = 15;

  oneof f_oneof {
    string f_oneof_a = 17;
    string f_oneof_b = 18;
  }

  bytes f_bytes    = 19;

  google.protobuf.BoolValue f_BoolValue = 20;
  google.protobuf.StringValue f_StringValue = 21;
  google.protobuf.DoubleValue f_DoubleValue = 22;
  google.protobuf.Int32Value f_Int32Value = 23;
  google.protobuf.Int64Value f_Int64Value = 24;
  google.protobuf.BytesValue f_BytesValue = 25;
  google.protobuf.UInt32Value f_Uint32Value = 26;
  google.protobuf.UInt64Value f_Uint64Value = 27;

  repeated google.protobuf.StringValue r_StringValue = 28;

  // NEXT: 29
}

enum ToplevelEnumV3 {
  TOPLEVEL_ENUM_V3_A = 0;
  TOPLEVEL_ENUM_V3_B = 1;
}
